[gd_scene load_steps=8 format=2]

[ext_resource path="res://fonts/bylight/bylight.tres" type="DynamicFont" id=1]
[ext_resource path="res://gui/pause/options/rebind_option.gd" type="Script" id=2]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[node name="RebindOption" type="Button"]
anchor_right = 1.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 18 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
toggle_mode = true
action_mode = 0
button_mask = 3
script = ExtResource( 2 )

[node name="ActionName" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 16.0
rect_min_size = Vector2( 0, 16 )
custom_fonts/font = ExtResource( 1 )
text = "[action]"

[node name="KeyList" type="Label" parent="."]
anchor_right = 1.0
rect_pivot_offset = Vector2( 640, 0 )
custom_fonts/font = ExtResource( 1 )
text = "[keys]"
align = 2

[connection signal="mouse_entered" from="." to="." method="_on_RebindOption_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_RebindOption_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_RebindOption_pressed"]
